--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
             <h2 class="">ElíasU.R.</h2>
             <a id="up" href="#Home"><i class="far fa-arrow-alt-circle-up"></i></a>
         </nav>
+        <header id="Home" class="py-3">
+            <h1 class="ml-4">Elías U. Rodríguez</h1>
+            <a id="down" href="#Contact"><i class="far fa-arrow-alt-circle-down"></i></a>
+            <h4><span id="typing"></span></h4>
+            <div id="texts">
+                <i>Just a developer.</i>
+                <i>Just a man.</i>
+                <i>Just a human.</i>
+                <!-- <i>Elias</i>
+                <i>Elías Rodríguez</i> -->
+            </div>
+        </header>
         <div class="container-fluid" id="app">
-            <header id="Home" class="py-3">
-                <h1>Elías U. Rodríguez</h1>
-                <a id="down" href="#Contact"><i class="far fa-arrow-alt-circle-down"></i></a>
-                <h4><span id="typing"></span></h4>
-                <div id="texts">
-                    <i>Just a developer.</i>
-                    <i>Just a man.</i>
-                    <i>Just a human.</i>
-                    <!-- <i>Elias</i>
-                    <i>Elías Rodríguez</i> -->
-                </div>
-            </header>
             <main id="Projects" class="d-flex flex-row flex-wrap justify-content-around align-items-center">
                 
                 <!-- proximo a agregar -->
