--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
         <header id="Home" class="py-3">
             <h1 class="ml-4">Elías U. Rodríguez</h1>
-            <a id="down" href="#Contact"><i class="far fa-arrow-alt-circle-down"></i></a>
+            <a id="down" class="mr-4" href="#Contact"><i class="far fa-arrow-alt-circle-down"></i></a>
             <h4><span id="typing"></span></h4>
             <div id="texts">
                 <i>Just a developer.</i>
