--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     </div>
                     <div class="my-3">
                         <template v-if="project.link != ''">
-                            <a target="blank" :href="project.link" class="btn btn-outline-success px-4">Demo</a>
+                            <a target="_blank" :href="project.link" class="btn btn-outline-success px-4">Demo</a>
                         </template>
                         <template v-if="project.repo != ''">
-                            <a target="blank" :href="project.repo" class="btn btn-outline-info px-4">Repo</a>
+                            <a target="_blank" :href="project.repo" class="btn btn-outline-info px-4">Repo</a>
                         </template>
                     </div>
                 </div>
